<resources>
    <string name="app_name">TimesTablesTrainerJava</string>
    <string name="let_s_begin">Let\'s Begin!</string>
    <string name="_0s">0s</string>
    <string name="_0_0">0/0</string>
    <string name="play_again">Play Again?</string>
    <string name="option_button">option button</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG</string>
    <string name="top_of_the_tables">Top of the Tables</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="main_menu">Main Menu</string>
    <string name="congratulations_you_have_a_new_personal_best">Congratulations, you have a new personal best!</string>
    <string name="mode_button">mode</string>
</resources>