<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenuActivity">

    <TextView
        android:id="@+id/landingMessage"
        android:layout_width="352dp"
        android:layout_height="121dp"
        android:gravity="center|center_horizontal"
        android:text="@string/top_of_the_tables"
        android:textColor="#0B0B0B"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/mode_button_0"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:height="180dp"
        android:backgroundTint="@color/picker_green"
        android:tag="0"
        android:text="@string/multiplication"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingMessage" />

    <Button
        android:id="@+id/mode_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:height="180dp"
        android:backgroundTint="@color/picker_yellow"
        android:tag="1"
        android:text="@string/division"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_button_0" />


    <Button
        android:id="@+id/mode_button_3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:height="180dp"
        android:backgroundTint="@color/picker_blue"
        android:tag="3"
        android:text="@string/subtraction"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_button_2" />

    <Button
        android:id="@+id/mode_button_2"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:height="180dp"
        android:backgroundTint="@color/picker_red"
        android:tag="2"
        android:text="@string/addition"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_button" />


</androidx.constraintlayout.widget.ConstraintLayout>